[project]
name = "brms"
version = "0.0.1"
authors = [{ name = "Mingze Gao", email = "adrian.gao@outlook.com" }]
description = "An educational framework for understanding bank risk management through simulation."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
license = { text = "MIT License" }
dependencies = ["PySide6", "QuantLib", "matplotlib", "numpy"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.black]
line-length = 88


[tool.isort]
profile = "black"
